tinyc/test/good/return-ptr-void-to-int.c
struct st { int x; };

int* foo()
{
    void *p;
    return p;
}

int main()
{
    foo();
    return 0;
}
