tinyc/test/bad/struct-void-member.c
struct s
{
    void x;
};

struct incomplete {};

int main()
{
    struct s x;

    return 0;
}
